manifest/base/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rate-limit
spec:
  ports:
  - port: 80
    targetPort: 2525
  selector:
    app: humanz-rate-limit-app
